# EQFast-for-discord

./: .env  .gitignore  2024ishikawa.xml  APIからデータ取得.py  EQinfoBOT.py  Jma_tsunamiBOT.py  LICENSE  NEWEQinfo.py  P2P_tsunamiBOT.py  README.md  TsunamiBOT.py  bot_log.txt  bot_start.bat  jma_xml.py  m-test.py  mainBOT.py  noto.json  pyproject.toml  test.py  update_bot.bat  wolfx 出力例.json
.stfolder/: syncthing-folder-aed682.txt
scripts/: dummy.json  dummy_p2p.json  test_discord.py  test_quakeinfo_discord.py
services/: discord_webhook.py  eew_api.py
src/eew_bot/: __main__.py  bot.py  config.py
src/eew_bot.egg-info/: PKG-INFO  SOURCES.txt
src/eew_bot/models/: eew.py  quake.py
src/eew_bot/parsers/: eew_parser.py  p2p_parser.py
src/eew_bot/services/: eew_api.py  quake_api.py
src/eew_bot/state/: last_event.py
src/eew_bot/tests/: ws_test_server.py
src/eew_bot/utils/: discord_formatter.py  discord_raw_formatter.py  discord_raw_webhook.py  discord_webhook.py  formatter.py  logger.py  retry.py  webhook.py
src/eqfast.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
utils/: logger.py
部品/: APIからデータ取得.py
