[project]
name = "eqfast"
version = "0.1.0"
description = "Earthquake Early Warning Bot"
requires-python = ">=3.10"
dependencies = [
    "websockets>=12.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pylint",
    "black",
    "mypy",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_backend"

[tool.setuptools.packages.find]
where = ["src"]
