[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "eqfast"
version = "0.1.0"
dependencies = [
    "websockets",
    "python-dotenv",
    "aiohttp",
]

[project.scripts]
eqfast = "eew_bot.bot:start"

[tool.setuptools.packages.find]
where = ["src"]